Fix PKAddPassesViewController dismissal.

It is possible for PassKitCoordinator to be asked for dialog
presentation while another dialog is already displayed. In this case
coordinator should early return and do not override _viewController.
Overriding _viewController will make coordinator loose a reference to
currently presented dialog and it will not be possible to dismiss
the presented dialog.

Bug: 804209
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: Ibb44d0bdb78247d291850354fcb11a309474e6d2
Reviewed-on: https://chromium-review.googlesource.com/881270
Reviewed-by: Sylvain Defresne <sdefresne@chromium.org>
Commit-Queue: Eugene But <eugenebut@chromium.org>
Cr-Commit-Position: refs/heads/master@{#531555}
Former-commit-id: 03edb08fcbef7d40acfb74923308362b3f3f4d0b